1.5.1/_sources/arcgis.mapping.rst.txt
arcgis.mapping module
=================

.. automodule:: arcgis.mapping

WebMap
-----------------
.. autoclass:: arcgis.mapping.WebMap
    :members:
    :undoc-members:
    :show-inheritance:

OfflineMapAreaManager
-----------------------
.. autoclass:: arcgis.mapping.OfflineMapAreaManager
    :members:
    :undoc-members:
    :show-inheritance:

WebScene
-------------------
.. autoclass:: arcgis.mapping.WebScene
    :members:
    :undoc-members:
    :show-inheritance:

MapImageLayer
-----------------
.. autoclass:: arcgis.mapping.MapImageLayer
    :members:
    :undoc-members:
    :show-inheritance:

MapImageLayerManager
-------------------
.. autoclass:: arcgis.mapping.MapImageLayerManager
    :members:
    :undoc-members:
    :show-inheritance:

VectorTileLayer
------------------
.. autoclass:: arcgis.mapping.VectorTileLayer
    :members:
    :undoc-members:
    :show-inheritance:

SceneLayer
------------------
.. autoclass:: arcgis.mapping.SceneLayer
    :members:
    :undoc-members:
    :show-inheritance:


export_map
------------
.. automethod:: arcgis.mapping.export_map

get_layout_templates
-----------
.. automethod:: arcgis.mapping.get_layout_templates


Symbology
-------------------
.. automodule:: arcgis.mapping.symbol
    :members:
    :undoc-members:
    :show-inheritance:

Renderers
-------------------

generate_renderer
-----------
.. automethod:: arcgis.mapping.renderer.generate_renderer

visual_variables
-----------
.. automethod:: arcgis.mapping.renderer.visual_variables

